# pattern-tracking-controller

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run.sh
samples/: CMakeLists.txt
samples/game-engine/: CMakeLists.txt  actor.cpp  actor.hpp  command.cpp  command.hpp  renderer.cpp  renderer.hpp  texture-region.cpp  texture-region.hpp
samples/invaders/: CMakeLists.txt  bullet-actor.cpp  bullet-actor.hpp  horizontal-actor.cpp  horizontal-actor.hpp  ia.cpp  ia.hpp  main.cpp  move-command.cpp  move-command.hpp  moving-actor.cpp  moving-actor.hpp  world.cpp  world.hpp
samples/pong/: CMakeLists.txt  main.cpp
samples/processing/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  data.hpp  input-processor.cpp  input-processor.hpp  ptc-impl.cpp  ptc-impl.hpp  ptc.cpp  ptc.hpp
src/input/: CMakeLists.txt  video-reader.cpp  video-reader.hpp
src/processing/: CMakeLists.txt  convolution.cpp  convolution.hpp  processing.cpp  processing.hpp
src/surf/: CMakeLists.txt  InterestPoint.cpp  InterestPoint.hpp  Octave.hpp  ResponseLayer.hpp  ResponseMap.cpp  ResponseMap.hpp  geometry.cpp  geometry.hpp  hessian.cpp  hessian.hpp  interest-point.hpp  ransac.cpp  ransac.hpp  response-layer.cpp  response-layer.hpp  response-map.cpp  response-map.hpp  surf.cpp  surf.hpp  utils.cpp  utils.hpp
src/utils/: CMakeLists.txt  logger.cpp  logger.hpp  utils.hpp
test/: CMakeLists.txt
test/surf/: CMakeLists.txt  main.cpp
